<resources>
    <string name="app_name">Quych Meal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">my_notification</string>
    <string name="channel_description">Welcome to Foody Land. Healthy Food</string>

    <string name="edit_profile" translatable="false">Edit profile</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="send_feedback" translatable="false">Send feedback</string>
    <string name="log_out" translatable="false">Log out</string>
    <string name="posts" translatable="false">Posts</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="username">Username</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="give_us_your_feedback">Give us your feedback</string>
    <string name="today_s_menu">Today\'s menu</string>
    <string name="what_ingredients_do_you_have">What ingredients do you have?</string>
    <string name="get_recipes">Get recipes</string>
    <string name="recipes_of_the_day">Recipes of the day</string>
    <string name="no_recipes_are_matching_your_ingredients">No recipes match your ingredients!</string>
    <string name="ingredients">Ingredients</string>
    <string name="method">Method</string>
    <string name="tutorial_video">Tutorial Video</string>
    <string name="try_now">Try now</string>
    <string name="servings">Servings</string>
    <string name="prep">Prep</string>
    <string name="cook">Cook</string>
    <string name="make_your_own_food_stay_at_home">Make your own food, stay at home</string>
    <string name="cooking_level">Cooking level:</string>
    <string name="enter_cooking_level">Enter cooking level (1-5)</string>
    <string name="let_s_cook">Let\'s cook</string>
    <string name="creator">Creator:</string>
    <string name="welcome">Welcome to</string>
    <string name="my_recipes">My Recipes</string>
    <string name="you_don_t_have_any_recipes_nlet_s_create_now">You don\'t have any recipes.\nLet\'s create now!</string>
    <string name="no_foods_found">No foods found</string>
    <string name="name">Name:</string>
    <string name="ingredients_food">Ingredients Food:</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="category">Category:</string>
    <string name="about">About:</string>
    <string name="description_about_food">Description about food</string>
    <string name="method_food">Method:</string>
    <string name="cooking_method">Cooking method</string>
    <string name="youtube_url">Youtube URL</string>
    <string name="add_image">Add Image</string>

    <string-array name="sex_options">
        <item>male</item>
        <item>female</item>
        <item>other</item>
    </string-array>

    <string-array name="languages_options">
        <item>Vietnamese</item>
        <item>English</item>
        <item>Japanese</item>
    </string-array>

</resources>
