<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.Fragments.TodayMenuScreenFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextQuychMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/today_s_menu"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchIngredientView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"
            app:queryHint="Search..."
            android:layout_marginHorizontal="10dp"
            />

        <TextView
            android:id="@+id/textView10"
            style="@style/TextQuychMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/what_ingredients_do_you_have"
            android:textStyle="bold" />


        <GridView
            android:id="@+id/ingredientGridView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:horizontalSpacing="10dp"
            android:numColumns="auto_fit"
            android:layout_marginHorizontal="5dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" />

        <Button
            android:id="@+id/btnGetRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:drawableEnd="@drawable/ic_recipee"
            android:paddingHorizontal="50dp"
            android:paddingVertical="10dp"
            android:text="@string/get_recipes"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>