<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DetailRecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/foodImgView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/fresh_spring_rolls" />

                <ImageButton
                    android:id="@+id/detailBackBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:padding="30dp"
                    android:rotation="180"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_arrow"
                    tools:ignore="MissingConstraints" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/ScreenQuychMeal"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/txtFoodName"
                        style="@style/TextQuychMeal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="Fresh Spring Rolls"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtFoodDesc"
                        style="@style/TextQuychMeal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="description"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/recipeWrite"
                        style="@style/TextQuychMeal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/creator"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtCreator"
                        style="@style/TextQuychMeal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Amelia Parker"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cookingLevel"
                        style="@style/TextQuychMeal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="@string/cooking_level"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/cookingLevelBar"
                        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:progressTint="#FFC107"
                        android:rating="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView8"
                            style="@style/TextQuychMeal"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/servings"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtServings"
                            style="@style/TextQuychMeal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="4pp"
                            android:textSize="16dp" />

                    </LinearLayout>

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        style="@style/BorderQuychMeal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/textView7"
                            style="@style/TextQuychMeal"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/prep"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtPreptime"
                            style="@style/TextQuychMeal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quicksand_bold"
                            android:gravity="center"
                            android:text="15m"
                            android:textSize="16dp" />

                    </LinearLayout>

                    <View
                        android:id="@+id/divider"
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        style="@style/BorderQuychMeal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/textView9"
                            style="@style/TextQuychMeal"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/cook"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtCookingTime"
                            style="@style/TextQuychMeal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="20m"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnCook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:paddingVertical="10dp"
                    android:drawableRight="@drawable/logo_icon"
                    android:text="@string/let_s_cook"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>